[gd_scene load_steps=13 format=2]

[ext_resource path="res://scenes/Game.gd" type="Script" id=1]
[ext_resource path="res://models/MarkArray/MarkArray.tscn" type="PackedScene" id=2]
[ext_resource path="res://scripts/GeneratorGridMap.gd" type="Script" id=3]
[ext_resource path="res://tileset/Asphalt_002/Asphalt2.tres.material" type="Material" id=4]
[ext_resource path="res://ui/HUD/HUD.tscn" type="PackedScene" id=5]
[ext_resource path="res://ui/HUD/Level.tscn" type="PackedScene" id=6]
[ext_resource path="res://ui/HUD/MainMenu.tscn" type="PackedScene" id=7]
[ext_resource path="res://music/battle1.ogg" type="AudioStream" id=8]
[ext_resource path="res://scenes/crosshair/CrossHair.tscn" type="PackedScene" id=9]

[sub_resource type="PlaneMesh" id=1]

custom_aabb = AABB( 0, 0, 0, 0, 0, 0 )
size = Vector2( 2, 2 )
subdivide_width = 0
subdivide_depth = 0

[sub_resource type="ConvexPolygonShape" id=2]

points = PoolVector3Array( 1, 0, 1, -1, 0, 1, 1, 0, -1, -1, 0, -1 )

[sub_resource type="Environment" id=3]

background_mode = 0
background_sky_custom_fov = 0.0
background_color = Color( 0, 0, 0, 1 )
background_energy = 1.0
background_canvas_max_layer = 0
ambient_light_color = Color( 0.485596, 0.565859, 0.609375, 1 )
ambient_light_energy = 1.0
ambient_light_sky_contribution = 1.0
fog_enabled = false
fog_color = Color( 0.5, 0.6, 0.7, 1 )
fog_sun_color = Color( 1, 0.9, 0.7, 1 )
fog_sun_amount = 0.0
fog_depth_enabled = true
fog_depth_begin = 10.0
fog_depth_curve = 1.0
fog_transmit_enabled = false
fog_transmit_curve = 1.0
fog_height_enabled = false
fog_height_min = 0.0
fog_height_max = 100.0
fog_height_curve = 1.0
tonemap_mode = 0
tonemap_exposure = 1.0
tonemap_white = 1.0
auto_exposure_enabled = false
auto_exposure_scale = 0.4
auto_exposure_min_luma = 0.05
auto_exposure_max_luma = 8.0
auto_exposure_speed = 0.5
ss_reflections_enabled = false
ss_reflections_max_steps = 64
ss_reflections_fade_in = 0.15
ss_reflections_fade_out = 2.0
ss_reflections_depth_tolerance = 0.2
ss_reflections_roughness = true
ssao_enabled = false
ssao_radius = 1.0
ssao_intensity = 1.0
ssao_radius2 = 0.0
ssao_intensity2 = 1.0
ssao_bias = 0.01
ssao_light_affect = 0.0
ssao_color = Color( 0, 0, 0, 1 )
ssao_quality = 0
ssao_blur = 3
ssao_edge_sharpness = 4.0
dof_blur_far_enabled = false
dof_blur_far_distance = 10.0
dof_blur_far_transition = 5.0
dof_blur_far_amount = 0.1
dof_blur_far_quality = 1
dof_blur_near_enabled = false
dof_blur_near_distance = 2.0
dof_blur_near_transition = 1.0
dof_blur_near_amount = 0.1
dof_blur_near_quality = 1
glow_enabled = false
glow_levels/1 = false
glow_levels/2 = false
glow_levels/3 = true
glow_levels/4 = false
glow_levels/5 = true
glow_levels/6 = false
glow_levels/7 = false
glow_intensity = 0.8
glow_strength = 1.0
glow_bloom = 0.0
glow_blend_mode = 2
glow_hdr_threshold = 1.0
glow_hdr_scale = 2.0
glow_bicubic_upscale = true
adjustment_enabled = false
adjustment_brightness = 1.0
adjustment_contrast = 1.0
adjustment_saturation = 1.0
_sections_unfolded = [ "Adjustments", "Ambient Light", "Auto Exposure", "Background", "DOF Far Blur", "DOF Near Blur", "Fog", "Glow", "Resource", "SS Reflections", "SSAO", "Tonemap" ]

[node name="Game" type="Node"]

script = ExtResource( 1 )

[node name="Goal" parent="." index="0" instance=ExtResource( 2 )]

transform = Transform( 10, 0, 0, 0, 10, 0, 0, 0, 10, 103.337, 1.53779, -118.501 )
collision_layer = 0
collision_mask = 2
_sections_unfolded = [ "Collision", "Transform" ]

[node name="Environment" type="Node" parent="." index="1"]

[node name="GridMap" type="Spatial" parent="Environment" index="0"]

script = ExtResource( 3 )
_sections_unfolded = [ "Pause", "Transform" ]
cell_size = Vector3( 30, 1, 30 )
size = 10
gen_seed = 1
start_position = Vector3( 1, 0, 1 )

[node name="Floor" type="MeshInstance" parent="Environment" index="1"]

editor/display_folded = true
transform = Transform( 500, 0, 0, 0, 1, 0, 0, 0, 500, 500, 0, 500 )
layers = 1
material_override = null
cast_shadow = 0
extra_cull_margin = 0.0
use_in_baked_light = false
lod_min_distance = 0.0
lod_min_hysteresis = 0.0
lod_max_distance = 0.0
lod_max_hysteresis = 0.0
mesh = SubResource( 1 )
skeleton = NodePath("..")
material/0 = ExtResource( 4 )
_sections_unfolded = [ "Geometry", "LOD", "Transform", "Visibility", "material" ]

[node name="StaticBody" type="StaticBody" parent="Environment/Floor" index="0"]

input_ray_pickable = true
input_capture_on_drag = false
collision_layer = 1
collision_mask = 1
friction = 1.0
bounce = 0.0
constant_linear_velocity = Vector3( 0, 0, 0 )
constant_angular_velocity = Vector3( 0, 0, 0 )

[node name="CollisionShape" type="CollisionShape" parent="Environment/Floor/StaticBody" index="0"]

shape = SubResource( 2 )
disabled = false

[node name="DirectionalLight" type="DirectionalLight" parent="Environment" index="2"]

transform = Transform( -0.769762, -0.322391, 0.550936, 0.0444913, 0.833892, 0.550131, -0.636779, 0.447982, -0.627555, 0, 12.5034, -14.6615 )
layers = 1
light_color = Color( 1, 0.947632, 0.847656, 1 )
light_energy = 1.0
light_indirect_energy = 1.0
light_negative = false
light_specular = 0.5
light_bake_mode = 1
light_cull_mask = -1
shadow_enabled = true
shadow_color = Color( 0.53125, 0.53125, 0.53125, 1 )
shadow_bias = 0.1
shadow_contact = 0.0
shadow_reverse_cull_face = false
editor_only = false
directional_shadow_mode = 2
directional_shadow_split_1 = 0.1
directional_shadow_split_2 = 0.2
directional_shadow_split_3 = 0.5
directional_shadow_blend_splits = false
directional_shadow_normal_bias = 0.8
directional_shadow_bias_split_scale = 0.25
directional_shadow_depth_range = 0
directional_shadow_max_distance = 200.0
_sections_unfolded = [ "Light", "Shadow" ]

[node name="Ennemies" type="Node" parent="." index="2"]

[node name="Supply" type="Node" parent="." index="3"]

[node name="HUD" parent="." index="4" instance=ExtResource( 5 )]

[node name="Level" parent="." index="5" instance=ExtResource( 6 )]

[node name="MainMenu" parent="." index="6" instance=ExtResource( 7 )]

[node name="WorldEnvironment" type="WorldEnvironment" parent="." index="7"]

environment = SubResource( 3 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="." index="8"]

stream = ExtResource( 8 )
volume_db = -5.0
pitch_scale = 1.0
autoplay = true
mix_target = 0
bus = "Master"

[node name="CrossHair" parent="." index="9" instance=ExtResource( 9 )]

[connection signal="level_changed" from="." to="Level" method="_on_level_changed"]

[connection signal="body_entered" from="Goal" to="." method="_on_Goal_body_entered"]

[connection signal="resumed" from="MainMenu" to="." method="_on_MainMenu_resumed"]


